# Fine-tuning-Projects

./: .gitignore  README.md  base_eval.ipynb  concepts_learning.ipynb  fine_tune_evaluation.ipynb  fine_tune_training.ipynb  learning.ipynb  main.py  pyproject.toml
data_curation/: day1.ipynb  day2.ipynb  items.py  loaders.py
llama3.1_8B_pricer-2025-10-22_00.05.08/: README.md  adapter_config.json
