[project]
name = "fine-tuning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets==3.6.0",
    "matplotlib>=3.10.7",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "trl==0.14.0",
    "wandb>=0.22.2",
]
